--- a/wildduck/templates/wildduck/tests/test-connection.yaml
+++ b/wildduck/templates/wildduck/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "wildduck.webmail.fullname" . }}-test-connection"
+  name: "{{ include "wildduck.wildduck.fullname" . }}-test-connection"
   labels:
-    {{- include "wildduck.webmail.labels" . | nindent 4 }}
+    {{- include "wildduck.wildduck.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "wildduck.webmail.fullname" . }}:{{ .Values.webmail.service.port }}']
+      args: ['{{ include "wildduck.wildduck.fullname" . }}:{{ .Values.wildduck.service.port }}']
   restartPolicy: Never
