--- a/wildduck/values.yaml
+++ b/wildduck/values.yaml
@@ -6,6 +6,14 @@ nameOverride: ""
 fullnameOverride: ""
 
 serviceAccount:
+  wildduck:
+    # Specifies whether a service account should be created
+    create: true
+    # Annotations to add to the service account
+    annotations: {}
+    # The name of the service account to use.
+    # If not set and create is true, a name is generated using the fullname template
+    name: ""
   webmail:
     # Specifies whether a service account should be created
     create: true
@@ -46,7 +54,9 @@ wildduck:
 
   service:
     type: ClusterIP
-    port: 80
+    httpPort: 80
+    imapsPort: 143
+    pop3sPort: 110
 
   ingress:
     enabled: false
