--- a/wildduck/templates/webmail/configmap.yaml
+++ b/wildduck/templates/webmail/configmap.yaml
@@ -10,7 +10,7 @@ data:
 
     [service]
         # email domain for new users
-        domain="{{ .Values.webmail.webMailDomain }}"
+        domain="{{ .Values.webMailDomain }}"
         # default quotas for new users
         quota=1024
         recipients=2000
@@ -20,7 +20,7 @@ data:
         allowJoin=true
         enableSpecial=false # if true the allow creating addresses with special usernames
         # allowed domains for new addresses
-        domains=["{{ .Values.webmail.webMailDomain }}"]
+        domains=["{{ .Values.webMailDomain }}"]
 
         generalNotification="" # static notification to show on top of the page
 
@@ -36,10 +36,10 @@ data:
 
     [dbs]
         # mongodb connection string for the main database
-        mongo="mongodb://mongo:27017/wildduck-webmail"
+        mongo="mongodb://{{ .Values.webmail.mongo.username }}:{{ .Values.webmail.mongo.password }}@{{ .Values.webmail.mongo.host }}:{{ .Values.webmail.mongo.port }}/wildduck-webmail"
 
         # redis connection string for Express sessions
-        redis="redis://{{ .Values.webmail.redis.username }}:{{ .Values.webmail.redis.password }}@{{ .Values.webmail.redis.host }}:{{ .Values.webmail.redis.port }}/5"
+        redis="redis://{{ .Values.redis.username }}:{{ .Values.redis.password }}@{{ .Values.redis.host }}:{{ .Values.redis.port }}/5"
 
     [www]
         host=false
@@ -66,7 +66,7 @@ data:
         # set to false if not using HTTPS
         enabled=true
         # must be https url or use default
-        appId="https://{{ .Values.webmail.webMailDomain }}"
+        appId="https://{{ .Values.webMailDomain }}"
 
     [log]
         level="silly"
@@ -75,14 +75,14 @@ data:
     [setup]
         # these values are shown in the configuration help page
         [setup.imap]
-            hostname="{{ .Values.webmail.mailDomain }}"
+            hostname="{{ .Values.mailDomain }}"
             secure=true
             port=993
         [setup.pop3]
-            hostname="{{ .Values.webmail.mailDomain }}"
+            hostname="{{ .Values.mailDomain }}"
             secure=true
             port=995
         [setup.smtp]
-            hostname="{{ .Values.webmail.mailDomain }}"
+            hostname="{{ .Values.mailDomain }}"
             secure=true
             port=465
