Set correct wildduck api url and accesstoken

--- a/wildduck/templates/webmail/configmap.yaml
+++ b/wildduck/templates/webmail/configmap.yaml
@@ -31,8 +31,8 @@ data:
             logoutRedirect = "http:/127.0.0.1:3000/logout"  # URL to redirect when user clicks on "log out"
 
     [api]
-        url="http://wildduck:8080"
-        accessToken=""
+        url="http://{{ include "wildduck.wildduck.fullname" . }}.{{ .Release.Namespace }}.svc.cluster.local:{{.Values.wildduck.service.httpPort}}"
+        accessToken="{{ .Values.wildduck.auth.accessToken }}"
 
     [dbs]
         # mongodb connection string for the main database
