--- a/wildduck/templates/zonemta/configmap.plugins.yaml
+++ b/wildduck/templates/zonemta/configmap.plugins.yaml
@@ -66,7 +66,7 @@ data:
 
     # optional hostname to be used in headers
     # defaults to os.hostname()
-    hostname="example.com"
+    hostname="{{ .Values.mailDomain }}"
 
     # How long to keep auth records in log
     authlogExpireDays=30
@@ -89,7 +89,7 @@ data:
         secret="secret value"
 
         # SRS domain, must resolve back to MX
-        rewriteDomain="example.com"
+        rewriteDomain="{{ .Values.mailDomain }}"
 
     # DKIM Settings
     # -------------
