--- a/wildduck/templates/webmail/configmap.yaml
+++ b/wildduck/templates/webmail/configmap.yaml
@@ -36,7 +36,12 @@ data:
 
     [dbs]
         # mongodb connection string for the main database
-        mongo="mongodb://{{ .Values.webmail.mongo.username }}:{{ .Values.webmail.mongo.password }}@{{ .Values.webmail.mongo.host }}:{{ .Values.webmail.mongo.port }}/wildduck-webmail"
+        {{- if .Values.wildduck.mongo.authEnabled }}
+            mongo="mongodb://{{ .Values.webmail.mongo.username }}:{{ .Values.webmail.mongo.password }}@{{ .Values.webmail.mongo.host }}:{{ .Values.webmail.mongo.port }}/wildduck-webmail"
+        {{- else }}
+            mongo="mongodb://@{{ .Values.webmail.mongo.host }}:{{ .Values.webmail.mongo.port }}/wildduck-webmail"
+        {{- end }}
+
 
         # redis connection string for Express sessions
         redis="redis://{{ .Values.redis.username }}:{{ .Values.redis.password }}@{{ .Values.redis.host }}:{{ .Values.redis.port }}/5"
