--- a/wildduck/templates/wildduck/configmap.yaml
+++ b/wildduck/templates/wildduck/configmap.yaml
@@ -209,11 +209,11 @@ data:
   dbs.toml: |-
     # mongodb connection string for the main database
 
-    {{- if .Values.wildduck.mongo.authEnabled }}
-        mongo="mongodb://{{ .Values.wildduck.mongo.username }}:{{ .Values.wildduck.mongo.password }}@{{ .Values.wildduck.mongo.host }}:{{ .Values.wildduck.mongo.port }}/wildduck"
-    {{- else }}
-        mongo="mongodb://{{ .Values.wildduck.mongo.host }}:{{ .Values.wildduck.mongo.port }}/wildduck"
-    {{- end }}
+    {{ if .Values.wildduck.mongo.authEnabled }}
+    mongo="mongodb://{{ .Values.wildduck.mongo.username }}:{{ .Values.wildduck.mongo.password }}@{{ .Values.wildduck.mongo.host }}:{{ .Values.wildduck.mongo.port }}/wildduck"
+    {{ else }}
+    mongo="mongodb://{{ .Values.wildduck.mongo.host }}:{{ .Values.wildduck.mongo.port }}/wildduck"
+    {{ end }}
 
     # redis connection string to connect to a single master (see below for Sentinel example)
     redis="redis://{{ .Values.redis.username }}:{{ .Values.redis.password }}@{{ .Values.redis.host }}:{{ .Values.redis.port }}/3"
