Remove credentials from auth disabled connection string in haraka

--- a/wildduck/templates/haraka/configmap.yaml
+++ b/wildduck/templates/haraka/configmap.yaml
@@ -1157,7 +1157,7 @@ data:
         {{ if .Values.wildduck.mongo.authEnabled }}
         url: 'mongodb://{{ .Values.wildduck.mongo.username }}:{{ .Values.wildduck.mongo.password }}@{{ .Values.wildduck.mongo.host }}:{{ .Values.wildduck.mongo.port }}/wildduck'
         {{ else }}
-        url: 'mongodb://{{ .Values.wildduck.mongo.username }}:{{ .Values.wildduck.mongo.password }}@{{ .Values.wildduck.mongo.host }}:{{ .Values.wildduck.mongo.port }}/wildduck'
+        url: 'mongodb://{{ .Values.wildduck.mongo.host }}:{{ .Values.wildduck.mongo.port }}/wildduck'
         {{ end }}
 
         ## database name or connection string for the users db
