--- a/wildduck/templates/wildduck/service-imap.yaml
+++ b/wildduck/templates/wildduck/service-imap.yaml
@@ -4,10 +4,10 @@ metadata:
   name: {{include "wildduck.wildduck.fullname" .}}
   labels: {{- include "wildduck.wildduck.labels" . | nindent 4}}
 spec:
-  type: {{.Values.wildduck.service.httpType}}
+  type: {{.Values.wildduck.service.imapType}}
   ports:
-    - port: {{.Values.wildduck.service.httpPort}}
-      targetPort: http
+    - port: {{.Values.wildduck.service.imapPort}}
+      targetPort: imap
       protocol: TCP
-      name: http
+      name: imap
   selector: {{- include "wildduck.wildduck.selectorLabels" . | nindent 4}}
