--- a/wildduck/templates/zonemta/configmap.yaml
+++ b/wildduck/templates/zonemta/configmap.yaml
@@ -7,13 +7,17 @@ data:
     # Database configuration
 
     # MongoDB connection string
-    mongo="mongodb://{{ .Values.zonemta.mongo.username }}:{{ .Values.zonemta.mongo.password }}@{{ .Values.zonemta.mongo.host }}:{{ .Values.zonemta.mongo.port }}/wildduck"
-
+    {{ if .Values.wildduck.mongo.authEnabled }}
+    mongo="mongodb://{{ .Values.wildduck.mongo.username }}:{{ .Values.wildduck.mongo.password }}@{{ .Values.wildduck.mongo.host }}:{{ .Values.wildduck.mongo.port }}/wildduck"
+    {{ else }}
+    mongo="mongodb://{{ .Values.wildduck.mongo.host }}:{{ .Values.wildduck.mongo.port }}/wildduck"
+    {{ end }}
+    
     # Redis connection string
     redis="redis://{{ .Values.redis.username }}:{{ .Values.redis.password }}@{{ .Values.redis.host }}:{{ .Values.redis.port }}/2"
 
     # Database name for ZoneMTA data in MongoDB. In most cases it should be the same as in the connection string
-    sender="zone-mta"
+    sender="wildduck"
 
     # Redis connection information
     #[redis]
@@ -25,17 +29,17 @@ data:
     # this file is loaded when NODE_ENV=production
 
     # MongoDB connection string
-    {{ if .Values.zonemta.mongo.authEnabled }}
-    mongo="mongodb://{{ .Values.wildduck.mongo.username }}:{{ .Values.wildduck.mongo.password }}@{{ .Values.zonemta.mongo.host }}:{{ .Values.zonemta.mongo.port }}/wildduck"
+    {{ if .Values.wildduck.mongo.authEnabled }}
+    mongo="mongodb://{{ .Values.wildduck.mongo.username }}:{{ .Values.wildduck.mongo.password }}@{{ .Values.wildduck.mongo.host }}:{{ .Values.wildduck.mongo.port }}/wildduck"
     {{ else }}
-    mongo="mongodb://{{ .Values.zonemta.mongo.host }}:{{ .Values.zonemta.mongo.port }}/wildduck"
+    mongo="mongodb://{{ .Values.wildduck.mongo.host }}:{{ .Values.wildduck.mongo.port }}/wildduck"
     {{ end }}
 
     # Redis connection string
     redis="redis://{{ .Values.redis.username }}:{{ .Values.redis.password }}@{{ .Values.redis.host }}:{{ .Values.redis.port }}/2"
 
     # Database name for ZoneMTA data in MongoDB. In most cases it should be the same as in the connection string
-    sender="zone-mta"
+    sender="wildduck"
 
     # Database name for Wild Duck users
     #users="wildduck"
