Add hosts to access.domains

--- a/wildduck/templates/haraka/configmap.yaml
+++ b/wildduck/templates/haraka/configmap.yaml
@@ -17,6 +17,9 @@ data:
     # !friend@aol.com
     #
     # See full docs for details:  http://haraka.github.io/manual/plugins/access.html
+    {{- range .Values.haraka.hosts }}
+    {{ . }}
+    {{- end}}
   aliases: |-
     {
     }
