--- a/wildduck/templates/haraka/configmap.yaml
+++ b/wildduck/templates/haraka/configmap.yaml
@@ -798,6 +798,7 @@ data:
   plugins: |-
     spf
     dkim_verify
+    access
 
     ## ClamAV is disabled by default. Make sure freshclam has updated all
     ## virus definitions and clamav-daemon has successfully started before
