--- a/wildduck/templates/haraka/deployment.yaml
+++ b/wildduck/templates/haraka/deployment.yaml
@@ -26,6 +26,7 @@ spec:
       {{- end }}
       securityContext:
         {{- toYaml .Values.haraka.podSecurityContext | nindent 8 }}
+      hostname: {{ .Values.haraka.reverseDnsHostname }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
